--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Chantal Mixtega Campos 5G</title>
-    <link rel="shortcut icon" href="magin.ico">
-<link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="./magin.ico">
+<link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
@@ -74,8 +74,9 @@
 
     </div>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
